2015-03-28  Adam Sjøgren  <asjo@koldfront.dk>

	* gnus-sum.el (gnus-summary-make-menu-bar): Add "Display HTML images"
	to "Display" menu.

2015-03-24  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* nnimap.el (nnimap-split-incoming-mail): If a message is already
	in the group it should be split to, don't re-copy it into the group.

2015-03-23  Ben Bacarisse  <ben.lists@bsb.me.uk>  (tiny change)

	* nnmh.el (nnmh-request-expire-articles):
	Work for the case nnmail-expiry-target is an nnmh group (bug#20170).

2015-03-21  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* registry.el (registry-lookup-secondary, registry-full)
	(registry-prune, registry-collect-prune-candidates):
	* gnus-registry.el (gnus-registry-load): Use slot names rather than
	initarg names in `oref' and `oset'.

2015-03-19  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* registry.el (registry-prune): Allow registry to reach full size
	before pruning.

2015-03-19  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* registry.el (registry-collect-prune-candidates): Fix call to
	cl-subseq.

2015-03-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-registry.el (gnus-registry-handle-action)
	(gnus-registry-post-process-groups): Don't add-to-list on a local var.
	(gnus-registry-keywords): Make it do something.
	(gnus-registry-import-eld): Remove unused var `new-entry'.
	(gnus-registry-action): Remove unused var `to-name'.
	(gnus-registry-make-db): Prefer `make-instance' to avoid
	compiler warnings.
	(gnus-registry-load, gnus-registry-fixup-registry): Avoid `oset'.

	* registry.el (registry-db): Don't oset-default an instance-allocated
	slot.

2015-03-10  Glenn Morris  <rgm@gnu.org>

	* message.el (message-valid-fqdn-regexp): Bump :version for
	2014-11-17 change.

2015-03-08  Rasmus Pank Roulund  <rasmus@pank.eu>

	* gnus-notifications.el (gnus-notifications-action): Raise window
	frame.
	(gnus-notifications-action): Allow mark as read.
	(gnus-notifications-notify): Show uption to mark as read.
